--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
    <nav>        <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="pages/about-us.html">About us</a></li>
-            <li><a href="pages/contact-us.html">Contact us</a></li>
+            <li><a href="pages/contact.html">Contact</a></li>
         </ul>
     </nav>
     <h2><b>Introduction</b></h2>
-    <p>This is the home page of our website. We are glad to have you here. Explore more by visiting other pages!<br>Learn more about White Water and the importance and safety of our <a href="Pages/products.html">products.</a>.</p>
-<img src="Images/Home page image.jpeg" alt="">
+    <p>This is the home page of our website. We are glad to have you here. Explore more by visiting other pages!<br>Learn more about DevOps and the importance of balancing working and personal life <a href="https://devops.com/" target="_blank">here</a>.</p>
+<img src="Images/Home page image.jpeg" alt="Home page image"width="300" height="200">
 </body>
 </html>
