--- a/Pages/about-us.html
+++ b/Pages/about-us.html
@@ -14,7 +14,7 @@
             <li><a href="../pages/contact.html">Contact</a></li>
         </ul>
     </nav>
-    <p><b>Who We Are</b></p>
+    <h2><b>Who We Are</b></h2>
     <p>We are a group of tech enthusiasts passionate about DevOps, development, and operations. Our goal is to create a harmonious environment where both teams work together seamlessly.</p>
 <img src="../Images/My picture.jpg" alt="My picture"width="100" height="150">
 <img src="../Images/My picture.jpg" alt="My picture"width="100" height="150">
