--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -14,11 +14,11 @@
             <li><a href="../pages/contact.html">Contact</a></li>
                 </ul>
     </nav>    
-<p><b>Get in Touch</b></p>
-<p>If you have any questions, feel free to reach out to us at contact details: 
-    <ul>
-        <li> <a href="email.html">info@ourwebsite.com</a>Email:</li>
-        <li><a href="+233-246-771-716.html">+233-246-771-716 Phone:</a></li>
+<h2><b>Get in Touch</b></h2>
+<p>If you have any questions, feel free to reach out to us through the following contact details:
+        <ul>
+        <li>Email: <a href="mailto:info@ourwebsite.com" target="_blank">info@ourwebsite.com</a></li>
+        <li>Phone: <a href="tel:+233246771716"target="_blank">+233-246-771-716</a></li>
      </ul>
 </p>
 </body>
