--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -6,7 +6,7 @@
     <title>Contact Us</title>
 </head>
 <body>
-    <h1><b>Contact Us</b></h1>+
+    <h1><b>Contact Us</b></h1>
      <nav>
         <ul>
             <li><a href="../index.html">Home</a></li>
