--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1><b>Welcome to Our Website</b></h1>
    <nav>        <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="../Pages/about-us.html">About us</a></li>
-            <li><a href="../Pages/contact.html">Contact</a></li>
+            <li><a href="Pages/about-us.html">About us</a></li>
+            <li><a href="Pages/contact.html">Contact</a></li>
         </ul>
     </nav>
     <h2><b>Introduction</b></h2>
