--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -9,16 +9,16 @@
     <h1><b>Contact Us</b></h1>
      <nav>
         <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../pages/about-us.html">About Us</a></li>
-            <li><a href="../pages/contact.html">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Pages/about-us.html">About Us</a></li>
+            <li><a href="Pages/contact.html">Contact</a></li>
                 </ul>
     </nav>    
 <h2><b>Get in Touch</b></h2>
 <p>If you have any questions, feel free to reach out to us through the following contact details:
         <ul>
-        <li>Email: <a href="mailto:info@ourwebsite.com" target="_blank">info@ourwebsite.com</a></li>
-        <li>Phone: <a href="tel:+233246771716"target="_blank">+233-246-771-716</a></li>
+        <li>Email: <a href="mailto:info@ourwebsite.com">info@ourwebsite.com</a></li>
+        <li>Phone: <a href="tel:+233246771716">+233-246-771-716</a></li>
      </ul>
 </p>
 </body>
