--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -17,8 +17,8 @@
 <h2><b>Get in Touch</b></h2>
 <p>If you have any questions, feel free to reach out to us through the following contact details:
         <ul>
-        <li>Email: <a href="mailto:info@ourwebsite.com" target="_blank">info@ourwebsite.com</a></li>
-        <li>Phone: <a href="tel:+233246771716"target="_blank">+233-246-771-716</a></li>
+        <li>Email: <a href="mailto:info@ourwebsite.com">info@ourwebsite.com</a></li>
+        <li>Phone: <a href="tel:+233246771716">+233-246-771-716</a></li>
      </ul>
 </p>
 </body>
