--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -9,7 +9,7 @@
     <h1><b>Contact Us</b></h1>
      <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="Pages/about-us.html">About Us</a></li>
             <li><a href="Pages/contact.html">Contact</a></li>
                 </ul>
