Homework 5 add ons

--- a/Pages/about-us.html
+++ b/Pages/about-us.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
+    <script src="https://kit.fontawesome.com/ac7beb975d.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>About Us</h1>
@@ -15,10 +16,15 @@
         </ul>
     </nav>
     <h2><b>Who We Are</b></h2>
-    <p>We are a group of tech enthusiasts passionate about DevOps, development, and operations. Our goal is to create a harmonious environment where both teams work together seamlessly.</p>
+    <p>We are a group of tech enthusiasts👨🏽‍💻👩🏽‍💻 passionate about DevOps, development, and operations. Our goal is to create a harmonious environment where both teams work together seamlessly.</p>
 <img src="../Images/My picture.jpg" alt="My picture"width="100" height="150">
 <img src="../Images/My picture.jpg" alt="My picture"width="100" height="150">
 <img src="../Images/My picture.jpg" alt="My picture"width="100" height="150">
 <p>Visit our <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank">partner website</a> for more information about our mission.</p>
+<br><i class="fa-regular fa-copyright"></i> 2024 Our Website
+  <br><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+ <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
+ <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>   
+ <a href="https://www.tiktok.com" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
 </body>
 </html>
