--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact</title>
+    <script src="https://kit.fontawesome.com/ac7beb975d.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <h1><b>Contact Us</b></h1>
@@ -14,12 +15,17 @@
             <li><a href="/Pages/contact.html">Contact</a></li>
                 </ul>
     </nav>    
-<h2><b>Get in Touch</b></h2>
+<h2><b>Get in Touch🤙🏽</b></h2>
 <p>If you have any questions, feel free to reach out to us through the following contact details:
         <ul>
         <li>Email: <a href="mailto:info@ourwebsite.com">info@ourwebsite.com</a></li>
         <li>Phone: <a href="tel:+233246771716">+233-246-771-716</a></li>
      </ul>
 </p>
+<br><i class="fa-regular fa-copyright"></i> 2024 Our Website
+  <br><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+ <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
+ <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>   
+ <a href="https://www.tiktok.com" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
 </body>
 </html>
