--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <script src="https://kit.fontawesome.com/ac7beb975d.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1><b>Welcome to Our Website</b></h1>
+    <h1><b>Welcome to Our Website🥳</b></h1>
    <nav>        <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="Pages/about-us.html">About us</a></li>
@@ -16,5 +17,10 @@
     <h2><b>Introduction</b></h2>
     <p>This is the home page of our website. We are glad to have you here. Explore more by visiting other pages!<br>Learn more about DevOps and the importance of balancing working and personal life <a href="https://devops.com/" target="_blank">here</a>.</p>
 <img src="Images/Home page image.jpeg" alt="Home page image"width="300" height="200">
+  <br><i class="fa-regular fa-copyright"></i> 2024 Our Website
+  <br><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+ <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
+ <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>   
+ <a href="https://www.tiktok.com" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
 </body>
 </html>
