--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -16,6 +16,20 @@
                 </ul>
     </nav>    
 <h2><b>Get in Touch🤙🏽</b></h2>
+<form action="" method="post">
+    <label for="First name">First Name:</label>
+    <input type="text" id="first-name" name="first-name"><br>
+    <label for="Last name">Last Name:</label>
+    <input type="text" id="last-name" name="last-name"><br>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email"><br>
+    <label for="Telephone">Telephone:</label>
+    <input type="tel" id="telephone" name="telephone"><br>
+    <label for="message"></label><br>
+    <textarea id="message" name="message" rows="10" cols="50" placeholder="Please type your message here"></textarea></b><br>
+   <div><b><button type="submit">Send message</button></b>
+    </form>
+</div>
 <p>If you have any questions, feel free to reach out to us through the following contact details:
         <ul>
         <li>Email: <a href="mailto:info@ourwebsite.com">info@ourwebsite.com</a></li>
