--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -18,13 +18,13 @@
 <h2><b>Get in Touch🤙🏽</b></h2>
 <form action="" method="post">
     <label for="First name">First Name:</label>
-    <input type="text" id="first-name" name="first-name"><br>
+    <input type="text" id="first-name" name="first-name" required><br>
     <label for="Last name">Last Name:</label>
-    <input type="text" id="last-name" name="last-name"><br>
+    <input type="text" id="last-name" name="last-name" required><br>
     <label for="email">Email:</label>
-    <input type="email" id="email" name="email"><br>
+    <input type="email" id="email" name="email" required><br>
     <label for="Telephone">Telephone:</label>
-    <input type="tel" id="telephone" name="telephone"><br>
+    <input type="tel" id="telephone" name="telephone"required><br>
     <label for="message"></label><br>
     <textarea id="message" name="message" rows="10" cols="50" placeholder="Please type your message here"></textarea></b><br>
    <div><b><button type="submit">Send message</button></b>
