--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -10,9 +10,9 @@
     <h1><b>Contact Us</b></h1>
      <nav>
         <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="/Pages/about-us.html">About Us</a></li>
-            <li><a href="/Pages/contact.html">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Pages/about-us.html">About Us</a></li>
+            <li><a href="Pages/contact.html">Contact</a></li>
                 </ul>
     </nav>    
 <h2><b>Get in Touch🤙🏽</b></h2>
