Fix navigation links in about-us.html

--- a/Pages/about-us.html
+++ b/Pages/about-us.html
@@ -10,9 +10,9 @@
     <h1>About Us</h1>
     <nav>
         <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="/Pages/about-us.html">About Us</a></li>
-            <li><a href="/Pages/contact.html">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Pages/about-us.html">About Us</a></li>
+            <li><a href="Pages/contact.html">Contact</a></li>
         </ul>
     </nav>
     <h2><b>Who We Are</b></h2>
